--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
             }
 
             // --- 5. ENERGY ---
-            html += '<div class="category">ЕНЕРГІЯ (YAHOO)</div>';
+            html += '<div class="category">ЕНЕРГІЯ </div>';
             const commodities = [
                 { symbol: 'CL=F', name: 'WTI Oil' }, { symbol: 'BZ=F', name: 'Brent Oil' }, { symbol: 'NG=F', name: 'Nat. Gas' }, { symbol: 'GC=F', name: 'Gold' }, { symbol: 'SI=F', name: 'Silver' }, { symbol: 'HG=F', name: 'Copper' }
             ];
@@ -588,7 +588,7 @@
             }
 
             // --- 6. AGRO ---
-            html += '<div class="category">АГРО (YAHOO)</div>';
+            html += '<div class="category">AGRO </div>';
             const agro = [
                 { symbol: 'ZC=F', name: 'Corn' }, { symbol: 'ZW=F', name: 'Wheat' }, { symbol: 'ZS=F', name: 'Soybean' }, { symbol: 'KC=F', name: 'Coffee' }
             ];
