--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
 <meta charset="UTF-8">
-<title>IBONARIUM · STACK · 25.01.2026</title>
+<title>IBONARIUM · ARHIVE · 25.01.2026</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -52,6 +52,13 @@ html, body {
 <iframe
   class="section"
   src="https://lavandaaudit.github.io/parsergeopolitical/"
+  loading="lazy">
+</iframe>
+
+<!-- 5 -->
+<iframe
+  class="section"
+  src="https://lavandaaudit.github.io/economic.radar/"
   loading="lazy">
 </iframe>
 
