--- a/index.html
+++ b/index.html
@@ -62,5 +62,12 @@ html, body {
   loading="lazy">
 </iframe>
 
+<!-- 6 (NEW — В САМИЙ НИЗ) -->
+<iframe
+  class="section"
+  src="https://lavandaaudit.github.io/new5/"
+  loading="lazy">
+</iframe>
+
 </body>
 </html>
