--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@ html, body {
   background: #000;
   height: 100%;
   overflow-y: auto;
+  line-height: 0; /* 🔥 прибирає мікрощілину */
 }
 
 /* одна сторінка = один екран */
 .section {
+  display: block;      /* 🔒 жорстко block */
   width: 100%;
   height: 100vh;
+  margin: 0;
+  padding: 0;
   border: none;
-  display: block;
   background: #000;
 }
 </style>
@@ -27,54 +30,14 @@ html, body {
 
 <body>
 
-<!-- 1 -->
-<iframe
-  class="section"
-  src="https://lavandaaudit.github.io/TEST2.ORIGINAL.FILE.25.01.2026/"
-  loading="lazy">
-</iframe>
-
-<!-- 2 -->
-<iframe
-  class="section"
-  src="https://lavandaaudit.github.io/ibonarium.soncemetr.2026/"
-  loading="lazy">
-</iframe>
-
-<!-- 2.1 (NEW) -->
-<iframe
-  class="section"
-  src="https://lavandaaudit.github.io/new13/"
-  loading="lazy">
-</iframe>
-
-<!-- 3 -->
-<iframe
-  class="section"
-  src="https://lavandaaudit.github.io/hlam5/"
-  loading="lazy">
-</iframe>
-
-<!-- 4 -->
-<iframe
-  class="section"
-  src="https://lavandaaudit.github.io/parsergeopolitical/"
-  loading="lazy">
-</iframe>
-
-<!-- 5 -->
-<iframe
-  class="section"
-  src="https://lavandaaudit.github.io/economic.radar/"
-  loading="lazy">
-</iframe>
-
-<!-- 6 (NEW — В САМИЙ НИЗ) -->
-<iframe
-  class="section"
-  src="https://lavandaaudit.github.io/new5/"
-  loading="lazy">
-</iframe>
+<iframe class="section" src="https://lavandaaudit.github.io/TEST2.ORIGINAL.FILE.25.01.2026/" loading="lazy"></iframe>
+<iframe class="section" src="https://lavandaaudit.github.io/ibonarium.soncemetr.2026/" loading="lazy"></iframe>
+<iframe class="section" src="https://lavandaaudit.github.io/new13/" loading="lazy"></iframe>
+<iframe class="section" src="https://lavandaaudit.github.io/hlam5/" loading="lazy"></iframe>
+<iframe class="section" src="https://lavandaaudit.github.io/parsergeopolitical/" loading="lazy"></iframe>
+<iframe class="section" src="https://lavandaaudit.github.io/economic.radar/" loading="lazy"></iframe>
+<iframe class="section" src="https://lavandaaudit.github.io/new5/" loading="lazy"></iframe>
+<iframe class="section" src="https://lavandaaudit.github.io/new14/" loading="lazy"></iframe>
 
 </body>
 </html>
