--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@ html, body {
 <iframe class="section" src="https://lavandaaudit.github.io/new5/" loading="lazy"></iframe>
 <iframe class="section" src="https://lavandaaudit.github.io/new14/" loading="lazy"></iframe>
 
+<!-- 🔻 додано в самий низ -->
+<iframe class="section" src="https://lavandaaudit.github.io/Docent.kafedry.ibonariuma/" loading="lazy"></iframe>
+
 </body>
 </html>
